using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Axis {
    public const string VERTICAL_AXIS = "Vertical";
    public const string HORIZONTAL_AXIS = "Horizontal";
    
}

public class Tags {
    public const string PLAYER_TAG = "Player";
}

public class AnimationTags {
    public const string WALK_PARAMETER = "Walk";
    public const string DEFEND_PARAMETER = "Defend";

    public const string ATTACK_1_TRIGGER = "Attack1";

    public const string ATTACK_2_TRIGGER = "HeavyAttack";

}